# ocaml_openapi_generator

./: LICENSE.md  README.md  ocaml_openapi_generator.opam
codegen/: README.mdx  config.ml  config.mli  dune  generator.ml  generator.mli  openapi_codegen.ml
codegen/ir/: README.mdx  body_content_type.ml  body_content_type.mli  dune  httpaf_sexpable.ml  httpaf_sexpable.mli  name.ml  name.mli  openapi_codegen_ir.ml  operation_method.ml  operation_method.mli  operation_parameter.ml  operation_parameter.mli  operation_response.ml  operation_response.mli  typify.ml  typify.mli
codegen/templates/: dune.jingoo  jane_object_tag.ml  jbuild.jingoo  module_aliases.ml.jingoo  operation_definition.jingoo  operations.ml.jingoo  record_definition.jingoo  type_definition.ml.jingoo  types.ml.jingoo  variant_definition.jingoo  variant_definition_object.jingoo  variant_definition_transparent.jingoo
runtime/: README.mdx  client.ml  client.mli  dune  jane_with_json.ml  jane_with_json.mli  openapi_runtime.ml  path_template.ml  path_template.mli  query_parameters.ml  query_parameters.mli  tagged_object.ml  tagged_object.mli
spec/: README.mdx  dune  openapi_spec.ml  types.ml  types.mli  utils.ml  utils.mli
