opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml_openapi_generator"
bug-reports: "https://github.com/janestreet/ocaml_openapi_generator/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_openapi_generator.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml_openapi_generator/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "base"
  "core"
  "core_kernel"
  "core_unix"
  "jsonaf"
  "ocaml-embed-file"
  "ppx_jane"
  "ppx_jsonaf_conv"
  "dune"             {>= "3.17.0"}
  "httpaf"           {>= "0.7.1"}
  "jingoo"           {>= "1.4.4" & < "1.5.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An OpenAPI 3 to OCaml client generator."
description: "
An OpenAPI 3 to OCaml client generator.
"
