(library
 (name openapi_codegen)
 (libraries async core core_unix.filename_unix httpaf jingoo jsonaf
   openapi_codegen_ir openapi_runtime openapi_spec
   roundtrippable_command_param)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv roundtrippable_command_param.ppx)))

(rule
 (targets embedded_strings.ml embedded_strings.mli)
 (deps %{bin:ocaml-embed-file} ./templates/dune.jingoo
   ./templates/types.ml.jingoo ./templates/type_definition.ml.jingoo
   ./templates/operations.ml.jingoo ./templates/record_definition.jingoo
   ./templates/variant_definition.jingoo
   ./templates/variant_definition_object.jingoo
   ./templates/variant_definition_transparent.jingoo
   ./templates/operation_definition.jingoo ./templates/jane_object_tag.ml
   ./templates/module_aliases.ml.jingoo)
 (action
  (bash "%{deps} -output embedded_strings")))
